Finally fixed some issues with overflow and nav bar not sticking

--- a/styles/_index.scss
+++ b/styles/_index.scss
@@ -4,7 +4,7 @@ body {
 }
 
 main {
-  overflow-x: hidden;
+  position: relative;
 }
 
 nav {
@@ -193,7 +193,7 @@ nav {
 
 .mobile-nav {
   display: none;
-  position: relative;
+  position: sticky;
   min-height: 8vh;
   transition: all 1s ease-out;
   z-index: 2 !important;
@@ -214,12 +214,13 @@ nav {
 }
 
 .drop-down {
-  position: absolute;
+  position: fixed;
   background: white;
   display: block;
   //transition: all 1s ease-out;
   width: 100vw;
   height: 100vh;
+  padding-top: 10vh;
   //clip-path: polygon(100% 0, 0 0, 0 0, 100% 0);
   //-webkit-clip-path: polygon(100% 0, 0 0, 0 0, 100% 0);
   pointer-events: none;
@@ -393,13 +394,15 @@ footer {
     display: flex;
     width: 100%;
     top: 0;
-    position: sticky;
+    position: sticky !important;
     background: white;
     transition: top 0.3s ease;
     z-index: 2;
   }
   .mobile-nav.active {
+    position: fixed;
     top: 0 !important;
+    z-index: 3 !important;
   }
   .mobile-logo h1 {
     font-size: 2.8rem;
